<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="com.fkevincastro.sesion2g2.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomnbre"
        android:textSize="20sp"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:id="@+id/ecorreo"
        />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:textAllCaps="false"
        android:textColor="@color/darkslategray"
        android:background="@color/beige"
        android:textStyle="italic|bold|normal"
        android:textSize="20sp"
        android:id="@+id/bGuardar"
        android:onClick="OnButtonCLicked"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rMaculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/masculino"
            android:checked="true"
            android:textSize="20dp"/>

        <RadioButton
            android:id="@+id/rFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/femenino"
            android:textSize="20dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/pasatiempos"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nadar"
        android:id="@+id/cNadar"
        android:onClick="onCheckBoxClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correr"
        android:id="@+id/cCorrer"
        android:onClick="onCheckBoxClicked"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cine"
        android:id="@+id/cCine"
        android:onClick="onCheckBoxClicked"/>

</LinearLayout>

